--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -797,6 +797,7 @@ en:
     details: "Form details"
     label: "Form"
     back: "Back To Forms Page"
+    help_text: "Help Text"
     actions:
       actions: "Actions"
       add_custom_field: "Add Custom Field"
