--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -974,6 +974,9 @@ en:
     name: "Name"
     hierarchy: "Hierarchy"
     confirm_delete: Are you sure you want to delete this location?
+    placename: "Place name"
+    type: "Type"
+    parent: "Parent location"
     messages:
       cannot_create: "Location could not be created"
       correct_errors: "Please correct the following errors and resubmit:"
