cleaned up location specs

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1295,6 +1295,7 @@ en:
 
       location:
         name_present: "must not be blank"
+        unique_name: "A Location with that name already exists, please enter a different name"
 
 
 
