added mark_for_mobile and unmark_for_mobile to case show page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -780,6 +780,7 @@ en:
       import: "Import"
       transfer: "Transfer"
       referral: "Referral"
+      sync_mobile: "Sync with mobile device"
 
   forms:
     label: "Forms"
