--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1045,6 +1045,7 @@ en:
     error_in_updating: "Error in updating the Report configuration."
     messages:
       delete_success: "Report was successfully deleted."
+    edit: "Edit"
 
   encrypt:
     password_title: "Create Password"
