fixed translation issues on Agency settings pages

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -583,6 +583,7 @@ en:
     logo: 'Logo'
     logo_enabled: 'Logo enabled?'
     label: "Agency"
+    view: "View Agency"
     successfully_created: "Agency successfully created."
     successfully_updated: "Agency successfully updated."
     drag_n_drop: "You can drag & drop the fields to edit the required order"
