--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -613,6 +613,7 @@ en:
 
   primero_modules:
     label: "Modules"
+    view: "View Module"
     actions:
       show_all: "Showing all"
       show: "Show"
@@ -640,6 +641,7 @@ en:
 
   primero_programs:
     label: "Program"
+    view: "View Program"
     actions:
       show_all: "Showing all"
       show: "Show"
@@ -662,6 +664,7 @@ en:
 
   user_groups:
     label: "User Groups"
+    view: "View User Group"
     actions:
       show_all: "Showing all"
       show: "Show"
