--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -143,6 +143,8 @@ en:
     filter_by:
       flag: "Flagged:"
       flag_label: "Flagged?"
+      mobile: "Mobile:"
+      mobile_label: "Marked for mobile?"
       social_worker: "Field/Case/Social Worker:"
       status: "Status:"
       age_range: "Age Range:"
