SL-82 M1: Cannot designate user as manager in UI.
Expose is_manager property in the user edit form.

Updated default users seed to use a boolean value.

Added several test cases.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -711,6 +711,7 @@ en:
     location: "Location"
     organization: "Organization"
     agency: "Agency"
+    manager: "Manager"
 
   actions: "actions"
   phone: "Phone"
