fixed Name translations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -576,6 +576,7 @@ en:
     create: "Create Role"
     edit: "Edit Role"
     name: "Name"
+    description: "Description"
     successfully_updated: "Role details are successfully updated."
     error_in_updating: "Error in updating the Role details."
     transfer_label: "Can this role be used for Transfers?"
@@ -632,6 +633,7 @@ en:
     edit: "Edit Module"
     show: "View"
     name: "Name"
+    description: "Description"
     successfully_updated: "Module details are successfully updated."
     error_in_updating: "Error in updating the Module details."
     record_type: "Record Types for this module"
@@ -659,6 +661,7 @@ en:
     edit: "Edit Program"
     show: "View"
     name: "Name"
+    description: "Description"
     start_date: "Program start date"
     end_date: "Program end date"
     successfully_updated: "Program details are successfully updated."
@@ -681,6 +684,7 @@ en:
     create: "Create User Group"
     edit: "Edit User Group"
     name: "Name"
+    description: "Description"
     successfully_updated: "User Group details are successfully updated."
     error_in_updating: "Error in updating the User Group details."
 
