--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -746,6 +746,7 @@ en:
   devices: "Devices"
   replications: "Replications"
   provide_translation: "Provide translation for"
+  hide_on_view_page: "Hide On View Page"
 
 
   record: "record"
