SL-242 external referrals.
Adjust modal dialog to use type_of_export(Primero(JSON), Non-Primero(CSV), PDF export) select box instead remote_primero checkbox.
Adjust controller to generate the corresponding export based on the type_of_export value.
Adjust controller to generate the properties based on the exporter, current PDF exporter need some specific layout.
Added migration to convert remote_primero values to type_of_export values and remove remote_primero property.
Adjust the model to remove remote_primero and add type_of_export property.
Adjust default subforms to add type_of_export and remove remote_primero property.

Missing test cases.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1463,7 +1463,7 @@ en:
     consent_label: "records have not provided consent."
     consent_override_label: "Do you wish to override this setting?"
     is_remote_label: "Are you referring to a remote system?"
-    remote_primero_label: "Is the remote system a Primero implementation?"
+    type_of_export: "What type of export do you want"
     notes_label: "Notes"
     user_mandatory: "User name is required"
     no_records_selected: "No records selected"
@@ -1480,7 +1480,7 @@ en:
     consent_label: "records have not provided consent."
     consent_override_label: "Do you wish to override this setting?"
     is_remote_label: "Are you transferring to a remote system?"
-    remote_primero_label: "Is the remote system a Primero implementation?"
+    type_of_export: "What type of export do you want"
     notes_label: "Notes"
     user_mandatory: "User name is required"
     failure: "%{record_type} %{id} transfer failed (check that consent fields are selected)"
