--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -770,17 +770,21 @@ en:
       read: "Read"
       write: "Write"
       flag: "Flag"
+      #TODO - ASSIGN could be an issue for SL-265
       assign: "Assign record owner"
+      #TODO - This doesn't exist anymore
       report_create: "Build reports"
       case: "Case"
       incident: "Incident"
       tracing_request: "Tracing Request"
-      user: "Users, Groups, Roles"
+      role: "Roles"
+      user: "Users, Groups"
       metadata: "Forms, Lookups"
       system: "System"
       report: "Report"
       self: "Access only my records"
       group: "Access all records owned by users in my group"
+      #TODO - will this be an issue for SL-265?
       all: "Access all records"
       consent_override: "Consent override"
       export_list_view_csv: "Export list view csv"
