--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1192,17 +1192,23 @@ en:
     last_updated: "Lasted Updated"
     case_stats: "Case Stats"
     count_risk_level_total:
-      one: "You have 1 %{count_type} risk case "
-      other: "You have %{count} %{count_type} risk cases "
+      one: "You have %{stat} %{stat_type} risk case "
+      other: "You have %{stat} %{stat_type} risk cases "
     count_risk_level_new:
-      one: "and 1 new %{count_type} risk case."
-      other: "and %{count} new %{count_type} risk cases."
+      one: "and %{stat} new %{stat_type} risk case."
+      other: "and %{stat} new %{stat_type} risk cases."
     count_records_total:
       one: "You have 1 total case "
-      other: "You have %{count} total cases "
+      other: "You have %{stat} total cases "
     count_records_new:
-      one: "and 1 new case."
-      other: "and %{count} new cases."
+      one: "and %{stat} new case."
+      other: "and %{stat} new cases."
+    count_referrals_total:
+      one: "You have 1 total referral "
+      other: "You have %{stat} total referrals  "
+    count_referrals_new:
+      one: "and %{stat} new referrals ."
+      other: "and %{stat} new referrals ."
 
   errors:
 
