--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -146,6 +146,7 @@ en:
       mobile: "Mobile:"
       mobile_label: "Marked for mobile?"
       social_worker: "Field/Case/Social Worker:"
+      agency: "Agency:"
       status: "Status:"
       age_range: "Age Range:"
       sex: "Sex:"
