--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1259,12 +1259,13 @@ en:
         full_name: "Please enter full name of the user"
         password_confirmation: "Please enter password confirmation"
         password_mismatch: "The password fields do not have the same password"
+        password_text: "- Please create a password that is at least 6 characters in length and contains both letters and numbers"
         role_ids: "Please select at least one role"
         organization: "Please enter the user's organization name"
         user_name: "Please enter a valid user name"
         email: "Please enter a valid email address"
         user_name_uniqueness: "User name has already been taken! Please select a new User name"
-        authenticate: "Can't authenticate a un-saved user"
+        authenticate: "Can't authenticate an un-saved user"
 
       child:
         at_least_one_field: "Please fill in at least one field or upload a file"
