SL-353: xls export button missing translation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1466,6 +1466,10 @@ en:
       all:  Excel
       one:  Excel
       selected:  Selected to Excel
+    selected_xls:
+      all:  Excel
+      one:  Excel
+      selected:  Selected to Excel
     incident_recorder_xls:
       all:  Incident Recorder
       one:  Incident Recorder
