--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -572,6 +572,7 @@ en:
       update: "Update"
       create: "Create"
       delete: "Delete"
+      copy: "Copy"
     view: "View Role"
     messages:
       confirmation: "Are you sure you want to delete this role? Deletion can not be undone. Click OK To Delete Role."
@@ -582,6 +583,7 @@ en:
     name: "Name"
     description: "Description"
     successfully_updated: "Role details are successfully updated."
+    successfully_copied: "Role successfully copied."
     error_in_updating: "Error in updating the Role details."
     transfer_label: "Can this role be used for Transfers?"
     referral_label: "Can this role be used for Referrals?"
