added copy_failure error message in copy_actions concern

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -583,8 +583,9 @@ en:
     name: "Name"
     description: "Description"
     successfully_updated: "Role details are successfully updated."
-    successfully_copied: "Role successfully copied."
     error_in_updating: "Error in updating the Role details."
+    copy_success: "Role successfully copied."
+    copy_failure: "Error copying Role.  Ensure the name does not conflict with another Role."
     transfer_label: "Can this role be used for Transfers?"
     referral_label: "Can this role be used for Referrals?"
     group_permission_label: "What records does this role affect?"
