--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -757,6 +757,7 @@ en:
   replications: "Replications"
   provide_translation: "Provide translation for"
   hide_on_view_page: "Hide On View Page"
+  last_login: "Last Login"
 
 
   record: "record"
