SL-404: Moved record information and increased the height of the side tab

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1456,6 +1456,8 @@ en:
     last_update: "Last Update"
     current_owner: "Current Owner"
     change_log: "Change Log"
+    record_information: "Record Information"
+    name_date_seperator: "on"
 
   exports:
     no_records: "No Records Available!"
