SL-406: Added support forum link to contact page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -901,6 +901,7 @@ en:
       phone: "Phone"
       location: "Location"
       other_information: "Other information"
+      support_forum: "Support Forum"
     updated: "Contact information was successfully updated."
     edit_info: "Edit Contact Information"
     info_label: "Contact Information"
