--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -831,6 +831,9 @@ en:
       incident: "Incident"
       tracing_request: "Tracing Request"
       violation: "Violation"
+      reportable_service: "Service"
+      reportable_follow_up: "Follow Up"
+      reportable_protection_concern: "Protection Concern"
 
   form_section:
     name: "Name"
